# icSimulation

./: .gitignore  CMakeLists.txt  README.md  config.json  config_P10.json  gui.mac  init.mac  mmSim.cc  nuclear_states.json  run.mac  vis.mac
aux_scripts/: analysis.py  plotEfficiencies.py
bayesian_optimization/: analysis.py  bayesian_opt.py  exploreData.ipynb  plot_silhouette_efficiency.py  plot_test.py  run.mac
bayesian_optimization/round1/: bayesian_opt_round1.py  logs.json
bayesian_optimization/round1/output/15/: config.json
bayesian_optimization/round1/output/16/: config.json
bayesian_optimization/round1/output/20/: config.json
bayesian_optimization/round1/output/23/: config.json
bayesian_optimization/round1/output/24/: config.json
bayesian_optimization/round1/output/25/: config.json
bayesian_optimization/round1/output/26/: config.json
bayesian_optimization/round1/output/27/: config.json
bayesian_optimization/round1/output/28/: config.json
bayesian_optimization/round1/output/29/: config.json
bayesian_optimization/round1/output/3/: config.json
bayesian_optimization/round1/output/30/: config.json
bayesian_optimization/round1/output/31/: config.json
bayesian_optimization/round1/output/32/: config.json
bayesian_optimization/round1/output/33/: config.json
bayesian_optimization/round1/output/34/: config.json
bayesian_optimization/round1/output/35/: config.json
bayesian_optimization/round1/output/36/: config.json
bayesian_optimization/round1/output/37/: config.json
bayesian_optimization/round1/output/38/: config.json
bayesian_optimization/round1/output/39/: config.json
bayesian_optimization/round1/output/40/: config.json
bayesian_optimization/round1/output/41/: config.json
bayesian_optimization/round1/output/42/: config.json
bayesian_optimization/round1/output/43/: config.json
bayesian_optimization/round1/output/44/: config.json
bayesian_optimization/round1/output/45/: config.json
bayesian_optimization/round1/output/46/: config.json
bayesian_optimization/round2/: bayesian_opt_round2.py  config.json  logs.json  run.mac  run_test.py
bayesian_optimization/round3/: analysis.py  bayesian_opt_round3.py  logs.json  run.mac
bayesian_optimization/round4/: analysis.py  bayesian_opt_round4.py  logs.json  plot_log.py
bayesian_optimization/test/1_20_3_120/: config.json
cmake/Modules/: FindROOT.cmake
include/: BinaryReactionPhysics.hh  BinaryReactionProcess.hh  MMActionInitialization.hh  MMAnalysis.hh  MMDetectorConstruction.hh  MMEventAction.hh  MMGenHit.hh  MMGenSD.hh  MMPrimaryGeneratorAction.hh  MMRunAction.hh  MMRunData.hh  MMTrackingAction.hh  MMTrackingInformation.hh  NucleonStates.hh  ProtonScatteringPhysics.hh  ProtonScatteringProcess.hh  TypeDef.hh
src/: BinaryReactionPhysics.cc  BinaryReactionProcess.cc  MMActionInitialization.cc  MMAnalysis.cc  MMDetectorConstruction.cc  MMEventAction.cc  MMGenHit.cc  MMGenSD.cc  MMPrimaryGeneratorAction.cc  MMRunAction.cc  MMRunData.cc  MMTrackingAction.cc  MMTrackingInformation.cc  NucleonStates.cc  ProtonScatteringPhysics.cc  ProtonScatteringProcess.cc
(+243 files in other folders)
